compiler/fir/raw-fir/psi2fir/testData/rawBuilder/declarations/invalidCode/destructuringInsideCallChain.kt
fun main(args: Array<String>) {
    "hello".val.toString().println
}